base/applications/paybridge-loan-svc/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: paybridge-loan-svc
  namespace: paybridge
spec:
  replicas: 1
  selector:
    matchLabels:
      app: paybridge-loan-svc
  template:
    metadata:
      labels:
        app: paybridge-loan-svc
    spec:
      containers:
        - name: paybridge-loan-svc
          image: dentamuhajir/paybridge-loan-svc:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8084
