base/applications/paybridge-loan-svc/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: paybridge-loan-svc
  namespace: paybridge
spec:
  selector:
    app: paybridge-loan-svc
  ports:
    - protocol: TCP
      port: 8084
      targetPort: 8084
  type: ClusterIP
