base/applications/paybridge-loan-svc/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: paybridge-loan-svc
  namespace: paybridge
spec:
  ingressClassName: nginx
  rules:
    - host: paybridge-loan-svc.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: paybridge-loan-svc
                port:
                  number: 8084
